refactor(web): 优化全局异常处理的参数校验错误信息拼接
- 使用Stream API和Collectors简化参数校验错误消息构造
- 改善日志输出的错误信息逻辑
- 删除冗余的StringBuilder代码，提升代码可读性和简洁度

refactor(count): 优化笔记及用户计数聚合逻辑并移除冗余DTO

- 使用TreeMap保证聚合时笔记ID和用户ID的升序
- 集成聚合与更新逻辑，避免额外的中间集合构造
- 删除已废弃的AggregationNoteCountMqDTO及相关方法

refactor(gateway): 优化信任代理IP初始化逻辑

- 使用Set.copyOf和StrUtil.splitTrim简化trustedProxyIps解析
- 统一使用hutool Validator类判断IP有效性
- 删除冗余循环和判断代码，提升代码简洁性

refactor(oss): 优化阿里云OSS文件上传与预签名URL生成

- 使用hutool工具类IdUtil和FileNameUtil代替UUID和字符串操作
- 统一文件后缀处理逻辑，避免裸字符串截取
- 简化文件名和对象名拼接逻辑

refactor(user): 优化短信助手及IP解析工具类

- 使用hutool StrUtil.subSufByLength简化手机号尾部截取
- 使用jakarta提供的JakartaServletUtil获取客户端真实IP，简化代码

refactor(kv): 增强Cassandra配置连接参数及batch插入效率

- 配置连接初始化及请求超时时间为15秒，提升稳定性
- 精简批量添加评论内容代码，减少冗余变量定义

refactor(comment): 重构评论业务相关代码

- 统一注释风格，简化接口注释为单行
- 使用Java 9+ Set.of和Map.of简化集合创建
- 优化点赞相关服务批量操作的流处理，使用partitioningBy代替filter
- 评论持久化批量插入和删除相关Mapper方法优化
- 优化分页和排序逻辑，使用工具类简化列表切片操作
- 调整测试用例中的import和变量声明，提升可读性

refactor(framework): 简化Spring Bean注册代码

- 重命名Bean方法名，删除中间变量，直接返回FilterRegistrationBean实例

refactor(distributed-id-generator): 精简分布式ID生成客户端注释

- 去除关于本地雪花算法降级的说明，文档更准确反映实现情况

refactor(search): 优化ES索引同步聚合器的批量提交实现

- 使用guava Lists.partition按批次分割请求列表
- 增强异常信息构造，使用Stream API汇总失败详情
- 优化queryRows方法，增加空集判断，使用Collectors.toMap简化映射构造